<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addQueryLayout"
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/queryTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:padding="@dimen/fab_margin"
        android:text="@string/new_query_title"
  />

    <EditText
        android:id="@+id/queryTitleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textAlignment="center"
        android:padding="@dimen/fab_margin"
        android:inputType="textAutoComplete"
        android:text="@string/title"/>

 />

    <TextView
        android:id="@+id/queryBodyText"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:padding="@dimen/fab_margin"
        android:text="@string/new_query_body"/>

    <EditText
        android:id="@+id/queryBodyView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:padding="@dimen/fab_margin"/>



</android.widget.LinearLayout>