<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/linearLayout"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
    android:layout_gravity="bottom|end"
android:layout_margin="@dimen/fab_margin"
android:orientation="vertical">

<LinearLayout
    android:id='@+id/measureBox'
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="invisible"
    android:background="@drawable/measure_box"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:background="@drawable/elcometer_screen"
        android:layout_margin="@dimen/fab_margin"
        >

        <TextView
            android:id="@+id/actualMeasure"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:layout_gravity = "center"
            android:textAlignment="center"
            android:padding = "5dp"
            android:text = "@string/wait_for_measure"
            android:textSize = "15sp"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/measures"
        android:textAlignment="center" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:padding="@dimen/fab_margin"
        android:id="@+id/measureScrollBox">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/measureHistory"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/no_history"
                android:textAlignment="center"/>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/fab_margin">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remember"
            android:textSize="12sp"
            android:textAlignment="center"
            android:onClick="rememberMeasure"
            android:background="@drawable/elcometer_button"
            android:textColor="@android:color/white"/>

        <android.support.v4.widget.Space
            android:layout_width="@dimen/fab_margin"
            android:layout_height="@dimen/fab_margin" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_to_opc_ua"
            android:textAlignment="center"
            android:textSize="12sp"
            android:onClick="sendElcometerMeasuresToOpcUa"
            android:background="@drawable/elcometer_button"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</LinearLayout>

<android.support.v4.widget.Space
    android:layout_width="20sp"
    android:layout_height="20sp" />

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|center">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/PreviousPictureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onPreviousPictureButtonPressed"
        android:src="@android:drawable/ic_media_previous" />

    <Space
        android:layout_width="30sp"
        android:layout_height="30sp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/NextPictureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onNextPictureButtonPressed"
        android:src="@android:drawable/ic_media_next" />

</LinearLayout>
    </LinearLayout>
